--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,6 @@ build_script:
   - stack --no-terminal exec pacman -- -S mingw-w64-x86_64-cmake --force --needed --noconfirm --noprogressbar
   - stack --no-terminal exec pacman -- -S mingw-w64-x86_64-gcc --force --needed --noconfirm --noprogressbar
   - stack --no-terminal exec pacman -- -S mingw-w64-x86_64-ninja --force --needed --noconfirm --noprogressbar
-  - stack --no-terminal build --haddock
+  - stack --no-terminal test --haddock
 
 test: off
