--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,13 @@ custom-setup:
 
 ghc-options: -Wall
 
+extra-libraries: stdc++
+
+when:
+  - condition: os(windows)
+    extra-libraries:
+      - rpcrt4
+
 dependencies:
   - base >= 4.10 && < 5
 
