Revert "Fix ninja build thread num"
This reverts commit 477f94384422b4b378197f397a50f19c61cfca3a.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,5 @@ jobs:
     steps:
       - checkout
       - run: |
-          apt install -y gawk
+          apt install -y gawk grep
           stack --no-terminal test --haddock
