--- a/package.yaml
+++ b/package.yaml
@@ -41,6 +41,7 @@ library:
   other-extensions:
     - DeriveAnyClass
     - RecordWildCards
+    - ScopedTypeVariables
 
 tests:
   direct-rocksdb-test:
