--- a/package.yaml
+++ b/package.yaml
@@ -40,6 +40,7 @@ library:
     - Database.RocksDB.Utils
   other-extensions:
     - DeriveAnyClass
+    - InterruptibleFFI
     - RecordWildCards
     - ScopedTypeVariables
 
